--- a/about-us.html
+++ b/about-us.html
@@ -3,11 +3,11 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="description" content="Azenta Template">
-    <meta name="keywords" content="Azenta, unica, creative, html">
+    <meta name="description" content="BHR Properties Template">
+    <meta name="keywords" content="BHR Properties, unica, creative, html">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Azenta | Template</title>
+    <title>BHR Properties | Template</title>
 
     <!-- Google Font -->
     <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700,800,900&display=swap"
@@ -199,7 +199,7 @@
                 <div class="col-lg-12">
                     <div class="section-title">
                         <span>About Us</span>
-                        <h2>Hello! Welcome to Azenta<span>.</span></h2>
+                        <h2>Hello! Welcome to BHR Properties<span>.</span></h2>
                         <p>There is no better advertisement campaign that is low cost and also successful at the same
                             time. Great business ideas when utilized effectively can save lots of money. This is not
                             only easy for those who work full-time as an advertiser, but also for those who work from
@@ -452,7 +452,7 @@
             </div>
             <div class="copyright-text">
                 <p><p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-  Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="ti-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
+  Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved 
   <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p></p>
             </div>
         </div>
