--- a/index.html
+++ b/index.html
@@ -910,7 +910,7 @@
         <div class="container">
             <div class="footer-text">
                 <div class="row">
-                    <div class="col-lg-3">
+                    <div class="col-lg-4">
                         <div class="footer-logo">
                             <div class="logo">
                                 <a href="#"><img src="img/footer-logo.png" alt=""></a>
@@ -922,7 +922,9 @@
                             </form>
                         </div>
                     </div>
-                    <div class="col-lg-3 offset-lg-1">
+                    <div class="col-lg-2">
+                    </div>
+                    <!-- <div class="col-lg-3 offset-lg-1">
                         <div class="footer-widget">
                             <h4>Property City</h4>
                             <ul>
@@ -938,8 +940,8 @@
                                 <li><i class="fa fa-caret-right"></i> <a href="#">San Diego</a></li>
                             </ul>
                         </div>
-                    </div>
-                    <div class="col-lg-2">
+                    </div> -->
+                    <div class="col-lg-3">
                         <div class="footer-widget">
                             <h4>Social</h4>
                             <ul class="social">
