--- a/index.html
+++ b/index.html
@@ -478,13 +478,13 @@
     <!-- Our Projects Section End -->
 
     <!-- Explore New Lifestyles Carousel Section Begin -->
-    <div class="partner-section">
+    <section class="partner-section feature-section spad">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
                     <div class="section-title">
                         <h2>Explore New Lifestyles</h2>
-                        <span>Find your next home, in any style you prefer.</span>
+                        <!-- <span>Find your next home, in any style you prefer.</span> -->
                     </div>
                 </div>
             </div>
@@ -517,7 +517,7 @@
                 </a>
             </div>
         </div>
-    </div>
+    </section>
     <!-- Explore New Lifestyles Carousel Section End -->
 
     <!-- Video Section Begin -->
