--- a/index.html
+++ b/index.html
@@ -108,34 +108,20 @@
             <div class="nav-logo">
                 <div class="container">
                     <div class="row">
-                        <div class="col-lg-2">
+                        <div class="col-lg-3">
                             <div class="logo">
                                 <a href="./index.html"><img src="img/logo.png" alt=""></a>
                             </div>
                         </div>
-                        <div class="col-lg-7">
+                        <div class="align-self-center ml-auto">
                             <nav class="main-menu">
                                 <ul>
-                                    <li class="active"><a href="./index.html">Home</a></li>
-                                    <li><a href="./property.html">What We Do</a></li>
-                                    <li><a href="./about-us.html">Our Projects</a></li>
                                     <li><a href="./blog.html">Rent/Sale</a></li>
-                                    <li><a href="./property-details.html">Blogs</a></li>
-                                    <li><a href="./contact.html">Contact Us</a></li>
+                                    <li><a href="./blog.html">Signin / Signup</a></li>
+                                    <li><a href="./blog.html">Menu</a></li>
+                                    <li class="top-right"><a href="#" class="property-sub">Post Property </a></li>
                                 </ul>
                             </nav>
-                        </div>
-                        <div class="col-lg-3">
-                            <div class="row">
-
-                                <a href="#" class="property-sub">Sign In</a>
-
-
-                                <div class="top-right">
-                                    <a href="#" class="property-sub">Submit Property</a>
-                                </div>
-                            </div>
-
                         </div>
                     </div>
                 </div>
