--- a/index.html
+++ b/index.html
@@ -116,10 +116,11 @@
                         <div class="align-self-center ml-auto">
                             <nav class="main-menu">
                                 <ul>
+                                    <li><a href="./blog.html">Home</a></li>
                                     <li><a href="./blog.html">Rent/Sale</a></li>
                                     <li><a href="./blog.html">Signin / Signup</a></li>
                                     <li><a href="./blog.html">Menu</a></li>
-                                    <li class="top-right"><a href="#" class="property-sub">Post Property </a></li>
+                                    <span class="top-right"><a href="#" class="property-sub font-weight-bold">Post Property </a></span>
                                 </ul>
                             </nav>
                         </div>
