about: content arrangement

--- a/about-us.html
+++ b/about-us.html
@@ -24,6 +24,7 @@
     <link rel="stylesheet" href="css/magnific-popup.css" type="text/css">
     <link rel="stylesheet" href="css/slicknav.min.css" type="text/css">
     <link rel="stylesheet" href="css/style.css" type="text/css">
+    <link rel="stylesheet" href="css/custom.css" type="text/css">
 </head>
 
 <body>
@@ -33,7 +34,7 @@
     </div>
 
     <!-- Offcanvas Menu Section Begin -->
-    <div class="offcanvas-menu-overlay"></div>
+    <!-- <div class="offcanvas-menu-overlay"></div>
     <div class="canvas-open">
         <i class="icon_menu"></i>
     </div>
@@ -93,7 +94,7 @@
                 </li>
             </ul>
         </div>
-    </div>
+    </div> -->
     <!-- Offcanvas Menu Section End -->
 
     <!-- Header Section Begin -->
@@ -106,7 +107,7 @@
                             <ul>
                                 <li><a href="./index.html">Home</a></li>
                                 <li><a href="./property.html">Property</a></li>
-                                <li class="active"><a href="./about-us.html">Agets</a></li>
+                                <li class="active"><a href="./about-us.html">Agents</a></li>
                                 <li><a href="./blog.html">News</a></li>
                                 <li><a href="./property-details.html">Pages</a></li>
                                 <li><a href="./contact.html">Contact</a></li>
@@ -180,10 +181,10 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="breadcrumb-text">
-                        <h2>About Us</h2>
+                        <h2>What We Do</h2>
                         <div class="breadcrumb-option">
-                            <a href="#"><i class="fa fa-home"></i> Home</a>
-                            <span>About Us</span>
+                            <a href="./index.html"><i class="fa fa-home"></i> Home</a>
+                            <span>What We Do</span>
                         </div>
                     </div>
                 </div>
@@ -198,38 +199,82 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="section-title">
-                        <span>About Us</span>
+                        <!-- <span>About Us</span> -->
                         <h2>Hello! Welcome to BHR Properties<span>.</span></h2>
-                        <p>There is no better advertisement campaign that is low cost and also successful at the same
-                            time. Great business ideas when utilized effectively can save lots of money. This is not
-                            only easy for those who work full-time as an advertiser, but also for those who work from
-                            home. Advertising from home is also a low cost option, which involves making and
-                            distributing fliers.</p>
+                        <p>We offer wide range of Residential Plots, Apartments/Villas, Farmland Plots in fast
+                            developing locations. We have associated with various developers to market and sell
+                            residential units and Farmlands in Hyderabad, Tirupati and Bengaluru</p>
                     </div>
-                    <div class="video-text set-bg" data-setbg="img/video-bg.jpg">
+                    <!-- <div class="video-text set-bg" data-setbg="img/video-bg.jpg">
                         <a href="https://www.youtube.com/watch?v=EzKkl64rRbM" class="play-btn video-popup"><i
                                 class="fa fa-play"></i></a>
                         <h4>Find The Perfect</h4>
                         <h2>Real Estate Agent Near You</h2>
-                    </div>
+                    </div> -->
                     <div class="row">
                         <div class="col-lg-6">
                             <div class="about-text">
-                                <h4>Our Story</h4>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-                                    incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices
-                                    gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis.</p>
+                                <h4>For Property Seeker</h4>
+                                <p> We offer premium category residential units from renowned property developers and
+                                    builders.Those we are looking to buy residential units, BHR Properties is the right
+                                    choice.With our experience in real estate, we are sure that we will be able to find
+                                    the right property at the right location, right time for the right deal for you.
+
+                                    Our Main Focus is in Hyderabad, Tirupati and Bengaluru. Right from finding the
+                                    property that suits your needs and desire to analyzing its appreciation value in the
+                                    future to making sure the property is 100% ready for buying on all aspects, we will
+                                    assist you through everything. We also take care post sale support for any concerns,
+                                    Resale of your property.</p>
                             </div>
                         </div>
                         <div class="col-lg-6">
-                            <div class="about-text">
-                                <h4>Our Vision</h4>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-                                    incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices
-                                    gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis.</p>
+                            <div class="align-self-center">
+                                <img src="img/agent/agent-3.jpg" alt="">
                             </div>
                         </div>
                     </div>
+
+                    <div class="row">
+                        <div class="col-lg-6">
+                            <div class="about-text">
+                                <h4>For Property Seeker</h4>
+                                <p> We offer premium category residential units from renowned property developers and
+                                    builders.Those we are looking to buy residential units, BHR Properties is the right
+                                    choice.With our experience in real estate, we are sure that we will be able to find
+                                    the right property at the right location, right time for the right deal for you.
+
+                                    Our Main Focus is in Hyderabad, Tirupati and Bengaluru. Right from finding the
+                                    property that suits your needs and desire to analyzing its appreciation value in the
+                                    future to making sure the property is 100% ready for buying on all aspects, we will
+                                    assist you through everything. We also take care post sale support for any concerns,
+                                    Resale of your property.</p>
+                            </div>
+                        </div>
+                        <div class="col-lg-6">
+                            <img src="img/agent/agent-3.jpg" alt="">
+                        </div>
+                    </div>
+
+                    <div class="row">
+                        <div class="col-lg-6">
+                            <div class="about-text">
+                                <h4>For Property Seeker</h4>
+                                <p> We offer premium category residential units from renowned property developers and
+                                    builders.Those we are looking to buy residential units, BHR Properties is the right
+                                    choice.With our experience in real estate, we are sure that we will be able to find
+                                    the right property at the right location, right time for the right deal for you.
+                                    Our Main Focus is in Hyderabad, Tirupati and Bengaluru. Right from finding the
+                                    property that suits your needs and desire to analyzing its appreciation value in the
+                                    future to making sure the property is 100% ready for buying on all aspects, we will
+                                    assist you through everything. We also take care post sale support for any concerns,
+                                    Resale of your property.</p>
+                            </div>
+                        </div>
+                        <div class="col-lg-6">
+                            <img src="img/agent/agent-3.jpg" alt="">
+                        </div>
+                    </div>
+
                 </div>
             </div>
         </div>
@@ -275,7 +320,7 @@
     <!-- Testimonial Section End -->
 
     <!-- Agent Section Begin -->
-    <section class="agent-section about-page spad">
+    <!-- <section class="agent-section about-page spad">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
@@ -355,11 +400,11 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
     <!-- Agent Section End -->
 
     <!-- Partner Carousel Section Begin -->
-    <div class="partner-section">
+    <!-- <div class="partner-section">
         <div class="container">
             <div class="partner-carousel owl-carousel">
                 <a href="#" class="partner-logo">
@@ -389,7 +434,7 @@
                 </a>
             </div>
         </div>
-    </div>
+    </div> -->
     <!-- Partner Carousel Section End -->
 
     <!-- Footer Section Begin -->
@@ -451,9 +496,13 @@
                 </div>
             </div>
             <div class="copyright-text">
-                <p><p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-  Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved 
-  <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p></p>
+                <p>
+                <p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+                    Copyright &copy;
+                    <script>document.write(new Date().getFullYear());</script> All rights reserved
+                    <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+                </p>
+                </p>
             </div>
         </div>
     </footer>
