--- a/blog.html
+++ b/blog.html
@@ -322,7 +322,8 @@
                                         <li><i class="fa fa-user"></i> Adam Smith</li>
                                         <li><i class="fa fa-clock-o"></i> 12th Feb, 2019</li>
                                     </ul>
-                                    <h4><a href="./blog-details.html">The Small Change That Creates Massive Results</a></h4>
+                                    <h4><a href="./blog-details.html">The Small Change That Creates Massive Results</a>
+                                    </h4>
                                 </div>
                             </div>
                         </div>
@@ -333,90 +334,55 @@
                         </div>
 
                     </div>
-                    
-                </div>
-                
-                <div class="col-lg-4">                    
-                        <div class="property-sidebar">
-                            <h4>Search Property</h4>
-                            <form action="#" class="sidebar-search">
-                                <div class="sidebar-btn">
-                                    <div class="bt-item">
-                                        <input type="radio" name="s-type" id="st-buy" checked>
-                                        <label for="st-buy">Buy</label>
-                                    </div>
-                                    <div class="bt-item">
-                                        <input type="radio" name="s-type" id="st-rent">
-                                        <label for="st-rent">Rent</label>
-                                    </div>
-                                </div>
-                                <select>
-                                    <option value="">Locations</option>
-                                </select>
-                                <select>
-                                    <option value="">Status</option>
-                                </select>
-                                <select>
-                                    <option value="">No of Bedroom</option>
-                                </select>
-                                <select>
-                                    <option value="">No of Bathrooms</option>
-                                </select>
-                                <select>
-                                    <option value="">No of Guest</option>
-                                </select>
-                                <div class="room-size-range">
-                                    <div class="price-text">
-                                        <label for="roomsizeRangeP">Size:</label>
-                                        <input type="text" id="roomsizeRangeP" readonly>
-                                    </div>
-                                    <div id="roomsize-range-P" class="slider"></div>
-                                </div>
-                                <div class="price-range-wrap">
-                                    <div class="price-text">
-                                        <label for="priceRangeP">Price:</label>
-                                        <input type="text" id="priceRangeP" readonly>
-                                    </div>
-                                    <div id="price-range-P" class="slider"></div>
-                                </div>
-                                <button type="submit" class="search-btn">Search Property</button>
-                            </form>
 
-                            <div class="best-agents">
-                                <h4>Latest Posts</h4>
-                                <a href="#" class="ba-item">
-                                    <div class="ba-pic">
-                                        <img src="img/properties/best-agent-1.jpg" alt="">
-                                    </div>
-                                    <div class="ba-text">
-                                        <h5>Lester Bradley</h5>
-                                        <span>Company Agents</span>
-                                        <p class="property-items">6 property </p>
-                                    </div>
-                                </a>
-                                <a href="#" class="ba-item">
-                                    <div class="ba-pic">
-                                        <img src="img/properties/best-agent-2.jpg" alt="">
-                                    </div>
-                                    <div class="ba-text">
-                                        <h5>Janie Blair</h5>
-                                        <span>Company Agents</span>
-                                        <p class="property-items">6 property </p>
-                                    </div>
-                                </a>
-                                <a href="#" class="ba-item">
-                                    <div class="ba-pic">
-                                        <img src="img/properties/best-agent-3.jpg" alt="">
-                                    </div>
-                                    <div class="ba-text">
-                                        <h5>Sophia Cole</h5>
-                                        <span>Marketing & Ceo</span>
-                                        <p class="property-items">6 property </p>
-                                    </div>
-                                </a>
-                            </div>
-                        </div>                  
-                </div>                
+                </div>
+
+                <div class="col-lg-4">
+                    <div class="property-sidebar">
+                        <h4>Categories</h4>
+                        <ul class="list-group">
+                            <li class="list-group-item active">Cras justo odio</li>
+                            <li class="list-group-item">Dapibus ac facilisis in</li>
+                            <li class="list-group-item">Morbi leo risus</li>
+                            <li class="list-group-item">Porta ac consectetur ac</li>
+                            <li class="list-group-item">Vestibulum at eros</li>
+                        </ul>
+
+                        <div class="best-agents">
+                            <h4>Latest Posts</h4>
+                            <a href="#" class="ba-item">
+                                <div class="ba-pic">
+                                    <img src="img/properties/best-agent-1.jpg" alt="">
+                                </div>
+                                <div class="ba-text">
+                                    <h5>Lester Bradley</h5>
+                                    <span>Company Agents</span>
+                                    <p class="property-items">6 property </p>
+                                </div>
+                            </a>
+                            <a href="#" class="ba-item">
+                                <div class="ba-pic">
+                                    <img src="img/properties/best-agent-2.jpg" alt="">
+                                </div>
+                                <div class="ba-text">
+                                    <h5>Janie Blair</h5>
+                                    <span>Company Agents</span>
+                                    <p class="property-items">6 property </p>
+                                </div>
+                            </a>
+                            <a href="#" class="ba-item">
+                                <div class="ba-pic">
+                                    <img src="img/properties/best-agent-3.jpg" alt="">
+                                </div>
+                                <div class="ba-text">
+                                    <h5>Sophia Cole</h5>
+                                    <span>Marketing & Ceo</span>
+                                    <p class="property-items">6 property </p>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
+                </div>
 
             </div>
         </div>
@@ -482,9 +448,13 @@
                 </div>
             </div>
             <div class="copyright-text">
-                <p><p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-  Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved 
-  <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p></p>
+                <p>
+                <p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+                    Copyright &copy;
+                    <script>document.write(new Date().getFullYear());</script> All rights reserved
+                    <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+                </p>
+                </p>
             </div>
         </div>
     </footer>
